--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,17 @@
 }
 
 /* Aplica estilos base */
-body {
+body,
+html {
+  margin: 0 !important;
+  padding: 0 !important;
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
