--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,41 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+
+/* Contenedor principal del scroll */
+.scroll-container {
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+/* Fondo y tamaño de la barra */
+.scroll-container::-webkit-scrollbar {
+  height: 10px;
+  background-color: rgb(0, 0, 0); /* Color claro */
+}
+
+/* "Barra" deslizable */
+.scroll-container::-webkit-scrollbar-thumb {
+  background-color: #ff2727; /* Color azul fuerte */
+  border-radius: 10px;
+  border: 2px solid rgb(255, 255, 255);
+}
+
+/* Efecto hover */
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background-color: #fd1515; /* Color azul oscuro */
+}
+
+/* Para Firefox */
+.scroll-container {
+  scrollbar-width: thin;
+  scrollbar-color: #ffffff rgba(255, 255, 255, 0.452);
+}
+
+/* Canvas del gráfico */
+.chart-canvas {
+  min-height: 280px; /* Ajusta según necesidad */
+}
